integration_tests/codegen_fail/fail/interface/fields_duplicate.stderr
error: GraphQL interface must have a different name for each field

  = note: https://spec.graphql.org/June2018/#sec-Interfaces

  --> fail/interface/fields_duplicate.rs:13:1
   |
13 | trait Character {
   | ^^^^^

error[E0412]: cannot find type `CharacterValue` in this scope
 --> fail/interface/fields_duplicate.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Character` in this scope
  --> fail/interface/fields_duplicate.rs:10:6
   |
10 | impl Character for ObjA {}
   |      ^^^^^^^^^ not found in this scope
